# django-udemy-clone

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
accounts/migrations/: 0003_auto_20240205_0916.py
courses/migrations/: 0007_auto_20240205_0916.py
udemy/: urls.py  views.py
udemyclone/: settings.py
udemyclone/staticfiles/: staticfiles.json
